[package]
license = "Apache-2.0"
name = "radar"
version = "1.0.27"
edition = "2024"
description = "Retro CRT tactical radar sweep"
publish = false
autobins = false

[lib]
name = "screensaver_radar"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
trance-api = { path = "../idlescreen/trance-api" }
libc = "0.2"

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
name = "trance-plugin-radar"
maintainer = "idlescreen <jerydleuck@gmail.com>"
extended-description = "Retro CRT tactical radar sweep. Official IdleScreen (Trance) screensaver plugin."
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/libscreensaver_radar.so", "usr/libexec/trance/screensavers/libscreensaver_radar.so", "644"],
    ["assets/trance-radar.png", "usr/share/pixmaps/trance-radar.png", "644"]
]

[package.metadata.generate-rpm]
name = "trance-plugin-radar"
release = "1"
arch = "x86_64"
summary = "Retro CRT tactical radar sweep"
description = "Retro CRT tactical radar sweep"
license = "Apache-2.0"
assets = [
    { source = "target/release/libscreensaver_radar.so", dest = "/usr/libexec/trance/screensavers/libscreensaver_radar.so", mode = "644", user = "root", group = "root" },
    { source = "assets/trance-radar.png", dest = "/usr/share/pixmaps/trance-radar.png", mode = "644", user = "root", group = "root" }
]

[package.metadata.generate-rpm.requires]
trance = "*"
